/*
 * Copyright 2019 Michael Mackenzie High
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";

package com.mackenziehigh.socius.web.messages;
option java_package = "com.mackenziehigh.socius.web.messages";
option java_outer_classname = "web_m";

/**
 * HTTP Request.
 */
message ServerSideHttpRequest
{
    /**
     * (optional) Use this field to attach debugging information.
     */
    repeated string debug = 1;

    /**
     * Human readable name of the server receiving the request.
     *
     * <p>
     * This value is assigned by the server itself, not the client.
     * </p>
     */
    optional string serverName = 2;

    /**
     * Universally-Unique-Identifier of the server receiving the request.
     *
     * <p>
     * This value is unique to a server, per lifetime.
     * If the server restarts, then it will use a different UUID.
     * </p>
     */
    optional string serverId = 3;

    /**
     * Reserved For Application Use.
     */
    optional string replyTo = 4;

    /**
     * Universally-Unique-Identifier of a single request.
     */
    optional string correlationId = 5;

    /**
     * Sequence number of requests coming from this server.
     */
    optional int64 sequenceNumber = 6;

    /**
     * A Java-compatible timestamp indicating when the request was received.
     */
    optional uint64 timestamp = 7;

    /**
     * Request Protocol.
     */
    optional HttpProtocol protocol = 8;

    /**
     * HTTP Verb of the request (GET/POST/etc).
     */
    optional string method = 9;

    /**
     * Requested URI.
     */
    optional string uri = 10;

    /**
     * Requested Path of URI.
     */
    optional string path = 11;

    /**
     * Raw Requested Path of URI.
     */
    optional string rawPath = 12;

    /**
     * Raw Query String.
     */
    optional string rawQuery = 13;

    /**
     * Query Parameters.
     */
    map<string, HttpQueryParameter> parameters = 14;

    /**
     * HTTP Headers.
     */
    map<string, HttpHeader> headers = 15;

    /**
     * Client Host.
     */
    optional string host = 16;

    /**
     * MIME Type of the body.
     */
    optional string contentType = 17;

    /**
     * Length of the body.
     */
    optional int32 contentLength = 18;

    /**
     * Body of the request.
     */
    optional bytes body = 19;

    /**
     * Trailing HTTP Headers.
     */
    map<string, HttpHeader> trailers = 20;
}

/**
 * HTTP Response.
 */
message ServerSideHttpResponse
{
    /**
     * (optional) Use this field to attach debugging information.
     */
    repeated string debug = 1;

    /**
     * (optional) is the HTTP request that precipitated this response.
     */
    optional ServerSideHttpRequest request = 2;

    /**
     * Universally-Unique-Identifier both the request and the response.
     */
    optional string correlationId = 3;

    /**
     * When this response was created.
     */
    optional uint64 timestamp = 4;

    /**
     * HTTP Response Code.
     */
    optional int32 status = 5;

    /**
     * HTTP Headers.
     */
    repeated HttpHeader headers = 6;

    /**
     * MIME type of the body.
     *
     * <p>
     * If set, the this field will override the Content-Type header.
     * </p>
     */
    optional string contentType = 7;

    /**
     * Body of the response.
     */
    optional bytes body = 8;
}

/**
 * HTTP Protocol.
 *
 * <p>
 * See Also: https://netty.io/4.0/api/io/netty/handler/codec/http/HttpVersion.html
 * </p>
 */
message HttpProtocol
{
    optional string text = 1;

    optional string name = 2;

    optional int32 majorVersion = 3;

    optional int32 minorVersion = 4;
}

/**
 * HTTP Query Parameter.
 */
message HttpQueryParameter
{
    /**
     * Parameter Name.
     */
    optional string key = 1;

    /**
     * Parameter Values, if any.
     */
    repeated string values = 2;
}

/**
 * HTTP Header.
 */
message HttpHeader
{
    optional string key = 1;

    repeated string values = 2;
}





